# reelix

./: .envrc  .gitignore  .tool-versions  AGENTS.md  LINUX_SETUP.md  Makefile  README.md  package-lock.json  package.json  webpack.config.js
.cargo/: config.toml
.github/: dependabot.yml
assets/: Disk Icon Reelix menu icon.pxd  Disk Icon Reelix.pxd
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.config.json  tauri.linux.conf.json  tauri.linux.dev.conf.json  tauri.macos.conf.json  tauri.macos.config.json  tauri.windows.conf.json
src-tauri/binaries/: libdriveio.dylib-x86_64-apple-darwin  libmakemkv.dylib-aarch64-apple-darwin  libmakemkv.dylib-x86_64-apple-darwin  mmccextr-x86_64-apple-darwin  mmccextr-x86_64-unknown-linux-gnu  mmgplsrv-x86_64-apple-darwin  mmgplsrv-x86_64-unknown-linux-gnu  sdftool-x86_64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/libraries/linux/: libdriveio.so.0  libmakemkv.so.1  libmmbd.so.0
src-tauri/libraries/mac-osx/: libmakemkv.dylib
src-tauri/src/: commands.rs  disk.rs  disk_listener.rs  lib.rs  main.rs  progress_tracker.rs  standard_error.rs  state.rs  templates.rs  the_movie_db.rs
src-tauri/src/commands/: auth.rs  disk.rs  general.rs  helpers.rs  mod.rs  rip.rs  setting.rs  the_movie_db.rs
src-tauri/src/models/: mkv.rs  mod.rs  movie_db.rs  optical_disk_info.rs  title_info.rs
src-tauri/src/services/: auto_complete.rs  converter.rs  disk_manager.rs  drive_info.rs  ftp_uploader.rs  ftp_validator.rs  github_api.rs  makemkvcon.rs  makemkvcon_parser.rs  mod.rs  plex.rs  reelix_manager.rs  semantic_version.rs  shell.rs  template.rs  the_movie_db.rs  tus_uploader.rs  upload_info.rs  upload_recovery.rs  version_checker.rs  zip_directory.rs
src-tauri/src/services/drive_info/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/services/reelix_manager/: active_uploads.rs  client.rs  error.rs  finalize_upload.rs  find_movie.rs  find_season.rs  find_tv.rs  mod.rs  oauth.rs  search.rs  session_by_id.rs  tus_create.rs  tus_offset.rs  tus_upload.rs  types.rs
src-tauri/src/state/: background_process_state.rs  job_state.rs  title_video.rs  upload_state.rs  uploaded_state.rs
src-tauri/src/templates/: auth.rs  disk_titles.rs  disks.rs  ftp_settings.rs  ftp_status.rs  jobs.rs  mod.rs  movies.rs  search.rs  seasons.rs  the_movie_db.rs  toast.rs  tvs.rs  update_indicator.rs
src-tauri/src/the_movie_db/: client.rs  mod.rs  models.rs
src-tauri/templates/: _option.html  _poster.html  about.html  error.html  error.html.turbo  error.turbo.html  greet.html  index.html  layout.html
src-tauri/templates/auth/: device_code.html  device_code.turbo.html  host_setup.html  host_setup.turbo.html  host_unreachable.html  host_unreachable.turbo.html
src-tauri/templates/disk_titles/: option.html  options.html  options.html.turbo  options.turbo.html
src-tauri/templates/disks/: _item.html  options.html  options.html.turbo  options.turbo.html  toast_progress.html  toast_progress.html.turbo  toast_progress.turbo.html  toast_progress_details.html  toast_progress_details.turbo.html  toast_progress_summary.html  toast_progress_summary.turbo.html
src-tauri/templates/ftp_settings/: index.html  index.turbo.html  show.html  show.html.turbo  show.turbo.html  status_bundle.turbo.html  status_message.html  status_message.turbo.html
src-tauri/templates/ftp_status/: container.html  update.turbo.html
src-tauri/templates/jobs/: completed_item.html  completed_section.html  container.html  details.html  item.html  item.turbo.html  summary.html  update.turbo.html
src-tauri/templates/movies/: card.html  cards.html  cards.html.turbo  cards.turbo.html  index.html  index.html.turbo  show.html  show.html.turbo  show.turbo.html
src-tauri/templates/search/: form.html  index.html  index.html.turbo  index.turbo.html  placeholder.html  result.html  results.html  results.html.turbo  results.turbo.html  search_form.html  suggestion.html  suggestion.html.turbo  suggestion.turbo.html
src-tauri/templates/seasons/: _part.html  episode.html  episodes.html  fab.html  parts.html  show.html  show.html.turbo  show.turbo.html  title_selected.html.turbo  title_selected.turbo.html
src-tauri/templates/the_movie_db/: index.html  index.html.turbo  index.turbo.html  show.html  show.html.turbo  show.turbo.html
src-tauri/templates/toast/: append.turbo.html  item.html
src-tauri/templates/tvs/: show.html  show.html.turbo  show.turbo.html
src-tauri/templates/update_indicator/: container.html  update.turbo.html
(+52 files in other folders)
