[package]
name = "Reelix"
version = "0.6.0"
description = "A tool for ripping Movies & TV Shows"
authors = ["Brandt Lareau"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reelix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tera = "1.20.0"

[dependencies]
diff = "0.1.13"
include_dir = "0.7.4"
lazy_static = "1.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33.1"
tauri = { version = "2", features = [] }
tauri-plugin-http = { version = "2", features = ["blocking", "json"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tera = "1.20.0"
tokio = "1.43.0"
url = "2.5.4"
