[package]
name = "Reelix"
version = "0.19.0"
description = "A tool for ripping Movies & TV Shows"
authors = ["Brandt Lareau"]
edition = "2021"
build = "build.rs"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reelix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = ">=2", features = [] }
tera = ">=1.20.0"

[dependencies]
chrono = ">=0.4.40"
diff = ">=0.1.13"
dirs = ">=6.0.0"
include_dir = ">=0.7.4"
lazy_static = ">=1.5.0"
serde = { version = ">=1", features = ["derive"] }
serde_json = ">=1"
sysinfo = ">=0.33.1"
tauri = { version = ">=2", features = ["tray-icon", "image-png"] }
tauri-plugin-http = { version = ">=2", features = ["blocking", "json"] }
tauri-plugin-notification = ">=2"
tauri-plugin-opener = ">=2"
tauri-plugin-shell = ">=2.2.1"
tauri-plugin-store = ">=2"
tera = ">=1.20.0"
tokio = ">=1.43.0"
url = ">=2.5.4"
wmi = ">=0.16.0"
[target."cfg(target_os = \"macos\")".dependencies]
cocoa = ">=0.26"
