[package]
name = "Reelix"
version = "0.34.0"
description = "A tool for ripping Movies & TV Shows"
authors = ["Brandt Lareau"]
edition = "2021"
build = "build.rs"

[profile.release]
lto = true      # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true    # Ensures debug symbols are removed.
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reelix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = ">=2", features = [] }


[dependencies]
chrono = ">=0.4.40"
diff = ">=0.1.13"
dirs = ">=6.0.0"
humantime = "2.3.0"
include_dir = ">=0.7.4"
log = ">=0.4.27"
lazy_static = ">=1.5.0"
serde = { version = ">=1", features = ["derive"] }
serde_json = ">=1"
suppaftp = { version = ">=6.3.0", features = ["rustls"] }
sysinfo = ">=0.33.1"
tauri = { version = ">=2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = ">=2"
tauri-plugin-http = { version = ">=2", features = ["blocking", "json"] }
tauri-plugin-log = ">=2"
tauri-plugin-notification = ">=2"
tauri-plugin-opener = ">=2"
tauri-plugin-shell = ">=2.2.1"
tauri-plugin-store = ">=2"
tokio = ">=1.43.0"
url = ">=2.5.4"
walkdir = "2.5.0"
wmi = ">=0.16.0"
zip = ">=4.3.0"
regex = "1.12.2"
askama = ">=0.14.0"
[target."cfg(target_os = \"macos\")".dependencies]
objc2 = ">=0.6.0"
objc2-app-kit = "0.3.1"
objc2-foundation = ">=0.3.1"
